--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="result">
-        <p>Paper covers rock. You win!</p>
+        <p></p>
     </div>
 
     <div class="choices">
@@ -37,6 +37,10 @@
 
      <p id="action-message">Make your move!</p>
 
+    <div class="text-center">
+        <button class="button" id="button">Restart</button>
+    </div>
+    
      <script src="script.js"></script>
 </body>
 </html>
